--- a/Nasu.css
+++ b/Nasu.css
@@ -15,7 +15,7 @@ body{background-color: #eaeaea;}
      
      
     }
-    @media only screen and (max-width: 768px) {
+    @media only screen and (min-width: 768px) {
         
         .nav {
           height: 300px;
