--- a/Nasu.css
+++ b/Nasu.css
@@ -7,6 +7,7 @@
 }
 /*fondos*/
 body{background-color: #eaeaea;}
+button{outline: none;}
 
 
 .article{background-image: url(http://drive.google.com/uc?export=view&id=1wyCYnrYuUeMlJVUG27yCrrwMzLmPS7BR);
