quitando outline de a

--- a/Nasu.css
+++ b/Nasu.css
@@ -8,6 +8,7 @@
 /*fondos*/
 body{background-color: #eaeaea;}
 button{outline: none;}
+a{outline: none;}
 
 
 .article{background-image: url(http://drive.google.com/uc?export=view&id=1wyCYnrYuUeMlJVUG27yCrrwMzLmPS7BR);
