--- a/Nasu.css
+++ b/Nasu.css
@@ -164,6 +164,11 @@ body{
     text-align: center;
     margin-top: 80px;
    }
+
+@font-face {
+    font-family: "FontAwesome";
+    src: url("fontawesome-webfont.woff");
+  }
    @media only screen and (min-width: 768px) {
        
        .nav {
