--- a/Nasu.css
+++ b/Nasu.css
@@ -6,7 +6,7 @@
     width: 100%;
 }
 /*fondos*/
-body{background-color: #eaeaea;}
+body{background-color: #fff;}
 button{outline: none;}
 a{outline: none;}
 
