--- a/Nasu.css
+++ b/Nasu.css
@@ -6,7 +6,7 @@
     width: 100%;
 }
 /*fondos*/
-body{background-color: #eaeaea;}
+body{background-color:black}
 button{outline: none;}
 a{outline: none;}
 
@@ -125,30 +125,32 @@ body{
 .nav{
     
     height: 300px;
-    text-align: left;
     position: absolute;
     z-index: 2;
    }
 .img_nav{
-    background-image: url(http://drive.google.com/uc?export=view&id=1BQYh650Qg3ocMvOQw34i3w2kyH-0MybN);
+    background-image: url(http://drive.google.com/uc?export=view&id=1SNeVn6DaAaVxqXjEQ4To7BVrnFEJOKys);
     background-repeat: no-repeat;
-    background-size: 101% 150%;
+    background-size: 155% 100%;
     position: relative;
-    width: 100%;
-   filter: blur(2px);
+   width: 100%;
+   background-position-x: center;
     z-index: 1;
     position: relative;
     height: 300px;
-    overflow: hidden;
+    
     
 }
 
 .nav a{
+    font-size: 12px;
+    font-family: 'Open Sans';
     text-decoration: none;
     color: white;
-    margin-left: 10px;
+    margin-left: 0px;
     margin-top: 44px;
     padding: 8px 0px;
+    
     
    }
 #home{
@@ -160,48 +162,66 @@ body{
    .nav p{
     font-family: 'Open Sans';
     font-weight: lighter;
-    font-size: 27px;
+    font-size: 23px;
     text-align: center;
-    margin-top: 80px;
+    margin-top: 100px;
+   }
+   .nav #lupa{
+    margin-left: 100px;
+   }
+   .nav #lupa:hover{
+       
+       font-size: 20px;
    }
 
-@font-face {
-    font-family: "FontAwesome";
-    src: url("fontawesome-webfont.woff");
-  }
    @media only screen and (min-width: 768px) {
        
        .nav {
-         height: 550px;
+         height: 500px;
+         margin-top: 45px;
        }
        .img_nav {
-           height: 550px;
+           height: 600px;
+           background-size: 100% 100%;
        }
        .nav a{
            margin-left: 48px;
+           margin-top: 100px;
+    text-decoration: none;
+    color: white;
+    margin-left: 10px;
+    margin-top: 44px;
+    padding: 8px 0px;
        }
        .nav p {
            font-size: 54px;
            margin-top: 170px;
        }
      }
+     .nav #lupa{
+        text-align: right;
+    }
+ 
 /*SECTION*/
 section{
     margin-top: -1px ;
     z-index: 3;
     position: relative;
-    background-color: #eaeaea;
+    background-color:#fff;
   
 }
 
 .article{
     margin-top: 33px;
+    border: 0.5px solid #ccc;
 }
 .aside{
     margin-top: 50px;
+    border: 0.5px solid #ccc;
 }
 .extra{
     margin-top: 10px;
+     border: 0.5px solid #ccc;
 
 }
 @media only screen and (min-width: 768px){
@@ -209,7 +229,7 @@ section{
             margin-top: -1px;
             z-index: 3;
             position: relative;
-            background-color: #eaeaea;
+            background-color: #fff;
     }
     .article{
         margin-top: 66px;
